--- a/estilo.css
+++ b/estilo.css
@@ -6,10 +6,10 @@
 }
 
 :root {
-    --color-primary:#ED4D1B
-    --color-secondary:#FF9A3C
-    --color-black:#000000
-    --color-white:#ffffff
+    --color-primary:#ED4D1B;
+    --color-secondary:#FF9A3C;
+    --color-black:#000000;
+    --color-white:#ffffff;
 }
 
 body{
