--- a/estilo.css
+++ b/estilo.css
@@ -57,7 +57,42 @@ header nav a:nth-child(2n-1) {
     text-decoration: none;
     text-transform: uppercase;
 }
-
+h1{
+    font-size: 3rem;
+    line-height: 105%;
+}
+h2{
+    font-size: 2.5rem;
+}
+.hero-section p {
+    font-size: 1.25rem;
+    padding-right: 1.25rem;
+}
+.hero-section .button{
+    position: relative;
+}
+.hero-section .button::after{
+    content: '';
+    background: url(imagens/arrow-curve.svg);
+    position: absolute;
+    top: 5rem;
+    right: -4rem;
+    height: 48px;
+    width: 132px;
+}
+.decoration{
+    display: block;
+    position: relative;
+}
+.hero-section{
+    padding-right: 0;
+    padding-bottom: 16rem;
+}
+.hero-section img{
+    display: block;
+    margin: 1.25rem 0 0 auto;
+    max-width: 100%;
+}
 .decoration::after{
     content: '';
     background: url(imagens/three-dashes.svg);
@@ -196,7 +231,7 @@ footer nav a{
         margin: 0 auto;
         max-width: 72rem;
     }
-    .container .row-reverse{
+    .container.row-reverse{
         flex-direction: row-reverse;
     }
 
@@ -216,5 +251,7 @@ footer nav a{
 }
 
 @media screen and (min-width:80rem){
+    .container{
     max-width: 80rem;
+    }
 }
